[gd_scene load_steps=39 format=2]

[ext_resource path="res://Script/dragon.gd" type="Script" id=1]
[ext_resource path="res://Script/idleDragon.gd" type="Script" id=2]
[ext_resource path="res://Script/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://Sprite/mobs/dragon/Dragon_sprite_sheet_noback.png" type="Texture" id=4]
[ext_resource path="res://Script/wanderDragon.gd" type="Script" id=5]
[ext_resource path="res://Script/mob.gd" type="Script" id=6]
[ext_resource path="res://Script/limitArea.gd" type="Script" id=7]
[ext_resource path="res://Script/seekDragon.gd" type="Script" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 27.0
height = 2.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 434, 0, 62, 72 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 496, 0, 62, 72 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 558, 0, 62, 72 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 620, 0, 62, 72 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 682, 0, 62, 72 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 744, 0, 62, 72 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 806, 0, 62, 72 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 930, 0, 62, 72 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 992, 0, 62, 72 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 1054, 0, 62, 72 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 1116, 0, 62, 72 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 1240, 0, 62, 72 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 1302, 0, 62, 72 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 1364, 0, 62, 72 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 1426, 0, 62, 72 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 62, 72 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 62, 0, 62, 72 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 124, 0, 62, 72 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 186, 0, 62, 72 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 248, 0, 62, 72 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 310, 0, 62, 72 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 372, 0, 62, 72 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 434, 0, 62, 72 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 6 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "die",
"speed": 8.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
} ]

[sub_resource type="Animation" id=30]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("anim_sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=31]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("anim_sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("stateMachine/seek:cooldown")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("Timer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}

[sub_resource type="CircleShape2D" id=27]
radius = 202.0

[sub_resource type="CircleShape2D" id=29]
radius = 38.0526

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 345.5, 203 )

[node name="mobDragon" type="Node2D"]
light_mask = 4
script = ExtResource( 6 )

[node name="dragon" type="KinematicBody2D" parent="." groups=["mobs"]]
collision_layer = 4
script = ExtResource( 1 )

[node name="coll_dragon" type="CollisionShape2D" parent="dragon"]
position = Vector2( -3, -5 )
shape = SubResource( 1 )

[node name="anim_sprite" type="AnimatedSprite" parent="dragon"]
frames = SubResource( 25 )
animation = "attack"
__meta__ = {
"_edit_lock_": true
}

[node name="animation" type="AnimationPlayer" parent="dragon"]
anims/RESET = SubResource( 30 )
anims/attack = SubResource( 31 )

[node name="Timer" type="Timer" parent="dragon"]
one_shot = true

[node name="wait" type="Timer" parent="dragon"]
wait_time = 2.0
one_shot = true

[node name="stateMachine" type="Node" parent="dragon"]
script = ExtResource( 3 )

[node name="idle" type="Node" parent="dragon/stateMachine"]
script = ExtResource( 2 )

[node name="seek" type="Node" parent="dragon/stateMachine"]
script = ExtResource( 8 )

[node name="wander" type="Node" parent="dragon/stateMachine"]
script = ExtResource( 5 )

[node name="playerDetector" type="Area2D" parent="dragon"]
collision_layer = 0

[node name="sight" type="CollisionShape2D" parent="dragon/playerDetector"]
shape = SubResource( 27 )

[node name="hurtbox" type="Area2D" parent="dragon"]
collision_layer = 0
collision_mask = 32

[node name="hurtCollision" type="CollisionShape2D" parent="dragon/hurtbox"]
position = Vector2( -3, -5 )
shape = SubResource( 29 )

[node name="limitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource( 7 )

[node name="moveArea" type="CollisionShape2D" parent="limitArea"]
position = Vector2( 0.5, 0 )
shape = SubResource( 26 )

[connection signal="body_entered" from="dragon/playerDetector" to="dragon/stateMachine/seek" method="_on_playerDetector_body_entered"]
[connection signal="body_exited" from="dragon/playerDetector" to="dragon/stateMachine/seek" method="_on_playerDetector_body_exited"]
[connection signal="area_entered" from="dragon/hurtbox" to="dragon" method="_on_hurtbox_area_entered"]
